[tool.poetry]
name = "applepy"
version = "0.1.0"
description = ""
authors = ["Cypheriel <61402923+Cypheriel@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.0"
cryptography = "^41.0.7"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pwinput = "^1.0.3"
appdirs = "^1.4.4"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
bandit = "^1.7.5"
pre-commit = "^3.4.0"
tomli = "^2.0.1"
isort = "^5.12.0"
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = [
    "F",
    "W",
    "E",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "ANN",
    "ASYNC",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "ISC",
    "ICN",
    # "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "Q",
    "RET",
    "SLF",
    "SIM",
    "ARG",
    "ERA",
    "PGH",
    "PL",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
]
ignore = [
    "D203",  # 1 blank line required before class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "E251",  # Unexpected spaces around keyword / parameter equals

]
fixable = ["ALL"]

[tool.pyright]
venvPath = "."
venv = ".venv"